# ai-notebook

./: .env.example  README.md  main.py  pyproject.toml
basics/ai-agent-from-scratch/src/agents/: agent_1.py  agent_2_tools.py
basics/ai-agent-from-scratch/src/evaluation/: reporting.py  runner.py
basics/prerequisites/01-local-setup/: README.md
basics/prerequisites/02-basic-concepts/: basic-concepts.py  evaluation_gaia.py
basics/prerequisites/03-tools-concepts/: tools_concepts.py
langchain/01-getting-started/: basic.py  joke_agent.py
langchain/02-chains/: multi_chain_story.py
